tests/error/multiple_main.nx
fun main() = print "hello"

fun main() = print "hello 2"
