tests/error/multiple_main.stderr
error: Duplicate function `main`
   --> tests/error/multiple_main.nx:3:1
  |
3 | fun main() = print "hello 2"
  | ^^^^^^^^

